--- a/langs/en.json
+++ b/langs/en.json
@@ -2,5 +2,6 @@
     "hello": "Hello",
     "apple": "I have an apple",
     "apple_plural": "I have {{count}} apples",
-    "apple_negative": "I have no apples"
+    "apple_negative": "I have no apples",
+    "dogs": "Many dogs"
   }
